--- a/jhodge_public/templates/contact.jinja2
+++ b/jhodge_public/templates/contact.jinja2
@@ -12,8 +12,8 @@
         <div id="contact-form" class="big-content black">
             <h1>Contact</h1>
             <div class="horizontal-bar white"></div>
-            <form>
-                <div id="fields">
+            <form id="fields" method="POST">
+                {# <div id="fields"> #}
                     <fieldset>
                         <label for="name">Name:</label><br/>
                         <label for="email">E-mail:</label><br/>
@@ -28,7 +28,7 @@
                         </textarea>
                         <input type='submit' class='red-btn' value='contact me' />
                     </fieldset>
-                </div>
+                {# </div> #}
             </form>
         </div>
     </section>
