--- a/jhodge_public/templates/home.jinja2
+++ b/jhodge_public/templates/home.jinja2
@@ -13,18 +13,18 @@
                         <p>
                             Mrs. Andrews is a caring and passionate teacher at a school of color. She takes special interest in the protection and well being of Timothy, a foreign student fwho returns after every failed test with cruel bruises. Soon she finds herself on the dark path of agonies, where kindness is for prey, and the predators savor human delights.
                         </p>
-                        <button class="red-btn"><a href="#">More</a></button>
+                        <button class="red-btn"><a href="{{ request.route_url('film_single', id=7872) }}">More</a></button>
                     </div>
                 </li>
                 <li>
-                    <img src="{{ request.static_path('jhodge_public:static/MEDIA/modern_grace_cover.jpg') }}" />
+                    <img src="{{ request.static_path('jhodge_public:static/MEDIA/modern_grace_cover.png') }}" />
                     <div class="slider-description">
                         <h2>Modern Grace</h2>
                         <div class="horizontal-bar white"></div>
                         <p>
                             Modern Grace is a biopic series that follows the lives of real people as they begin a journey of faith searching for meaningful answers to some of life’s deepest challenges.
                         </p>
-                        <button class="red-btn"><a href="#">More</a></button>
+                        <button class="red-btn"><a href="{{ request.route_url('film_single', id=7872) }}">More</a></button>
                     </div>
                 </li>
                 <li>
@@ -36,9 +36,9 @@
                             A disturbing and brutal game amongst teens, targeting whites and immigrants in Inner city communities. 
                         </p>
                         <p>
-                            Knockout Game is a cautionary tale that explores the price of violence with an unflinching eye.
+                            The Knockout Game is a cautionary tale that explores the price of violence with an unflinching eye.
                         </p>
-                        <button class="red-btn"><a href="#">More</a></button>
+                        <button class="red-btn"><a href="{{ request.route_url('film_single', id=7872) }}">More</a></button>
                     </div>
                 </li>
             </ul>
@@ -49,27 +49,54 @@
         </div>
     </section>
     <section id="content">
+        {% for film in all_films %}
         <div class="row home">
             <div class="media-img">
-                <a href="film-single.html">
-                    <img src="http://www.placehold.it/400x265" />
+                <a href="{{ request.route_url('film_single', id=film.id) }}">
+                    <img src="{{ film.screenshot_url }}" />
                 </a>
             </div>
-            <a href="film-single.html">
+            <a href="{{ request.route_url('film_single', id=film.id) }}">
+                <div class="media-description">
+                    <h2>{{ film.title }}</h2>
+                    <i class="fa fa-video-camera media-type" aria-hidden="true"></i>
+                    <div class="horizontal-bar white"></div>
+                    <div class="media-meta full">
+                        <ul>
+                            <li>{{ film.release_date }}</li>
+                            <li>{{ film.production }}</li>
+                        </ul>
+                    </div>
+                    <div class="media-excerpt">
+                        <p>
+                            {{ film.home_text }}
+                        </p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        {% endfor %}
+{#         <div class="row home">
+            <div class="media-img">
+                <a href="{{ request.route_url('film_single', id=7872) }}">
+                    <img src="{{ request.static_path('jhodge_public:static/MEDIA/the_kind_ones_screenshot.jpg') }}" />
+                </a>
+            </div>
+            <a href="{{ request.route_url('film_single', id=7872) }}">
                 <div class="media-description">
                     <h2>The Kind Ones</h2>
                     <i class="fa fa-video-camera media-type" aria-hidden="true"></i>
                     <div class="horizontal-bar white"></div>
                     <div class="media-meta full">
                         <ul>
-                            <li>May 30, 2016</li>
+                            <li>Coming 2016</li>
                             <li>Director</li>
                             <li>Primal Links Media</li>
                         </ul>
                     </div>
                     <div class="media-excerpt">
                         <p>
-                            These would be words describing the movie. I haven't seen it, so I don't know what to say about it, however you directed it so you would have more of an idea of what should go here...
+                            Mrs. Andrews is a caring and passionate teacher at a school of color. She takes special interest in the protection and well being of Timothy, a foreign student fwho returns after every...
                         </p>
                     </div>
                 </div>
@@ -77,56 +104,56 @@
         </div>
         <div class="row home">
             <div class="media-img">
-                <a href="writing-single.html">
-                    <img src="http://www.placehold.it/400x265" />
+                <a href="{{ request.route_url('film_single', id=7872) }}">
+                    <img src="{{ request.static_path('jhodge_public:static/MEDIA/modern_grace_cover.png') }}" />
                 </a>
             </div>
-            <a href="writing-single.html">
+            <a href="{{ request.route_url('film_single', id=7872) }}">
                 <div class="media-description">
-                    <h2>The Girl in the Doll's Dress</h2>
-                    <i class="fa fa-file-text media-type" aria-hidden="true"></i>
-                    <div class="horizontal-bar white"></div>
-                    <div class="media-meta full">
-                        <ul>
-                            <li>May 30, 2016</li>
-                            <li>Director</li>
-                            <li>Some Publisher</li>
-                        </ul>
-                    </div>
-                    <div class="media-excerpt">
-                        <p>
-                            These would be words describing the story. I haven't read it, so I don't know what to say about it, however you wrote it so you would have more of an idea of what should go here...
-                        </p>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="row home">
-            <div class="media-img">
-                <a href="#">
-                    <img src="http://www.placehold.it/400x265" />
-                </a>
-            </div>
-            <a href="#">
-                <div class="media-description">
-                    <h2>The Kind Ones</h2>
+                    <h2>Modern Grace</h2>
                     <i class="fa fa-video-camera media-type" aria-hidden="true"></i>
                     <div class="horizontal-bar white"></div>
                     <div class="media-meta full">
                         <ul>
-                            <li>May 30, 2016</li>
+                            <li>February 2, 2016</li>
                             <li>Director</li>
                             <li>Primal Links Media</li>
                         </ul>
                     </div>
                     <div class="media-excerpt">
                         <p>
-                            These would be words describing the movie. I haven't seen it, so I don't know what to say about it, however you directed it so you would have more of an idea of what should go here...
+                            A biopic series that follows the lives of real people as they begin a journey of faith searching for meaningful answers to some of life’s deepest challenges.
                         </p>
                     </div>
                 </div>
             </a>
         </div>
+        <div class="row home">
+            <div class="media-img">
+                <a href="{{ request.route_url('film_single', id=7872) }}">
+                    <img src="{{ request.static_path('jhodge_public:static/MEDIA/knockout_game_cover.jpg') }}" />
+                </a>
+            </div>
+            <a href="{{ request.route_url('film_single', id=7872) }}">
+                <div class="media-description">
+                    <h2>The Knockout Game</h2>
+                    <i class="fa fa-video-camera media-type" aria-hidden="true"></i>
+                    <div class="horizontal-bar white"></div>
+                    <div class="media-meta full">
+                        <ul>
+                            <li>2015</li>
+                            <li>Director</li>
+                            <li>Primal Links Media</li>
+                        </ul>
+                    </div>
+                    <div class="media-excerpt">
+                        <p>
+                            A disturbing and Brutal game amongst teens, targeting whites and immigrants in Inner city communities. Gregory wants to play. He wants to get in good with G-Life’s gang. He wants...
+                        </p>
+                    </div>
+                </div>
+            </a>
+        </div> #}
     </section>
 </main>
 {% endblock content %}
