--- a/jhodge_public/templates/layout.jinja2
+++ b/jhodge_public/templates/layout.jinja2
@@ -8,6 +8,19 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
         <link rel="stylesheet" href="{{ request.static_path('jhodge_public:static/css/style.css')}}" type="text/css" />
+        {% if home %}
+            <title>Jamal Hodge | Home</title>
+        {% elif film %}
+            <title>Jamal Hodge | Film</title>
+        {% elif writing %}
+            <title>Jamal Hodge | Writing</title>
+        {% elif about %}
+            <title>Jamal Hodge | About</title>
+        {% elif contact %}
+            <title>Jamal Hodge | Contact</title>
+        {% else %}
+            <title>Jamal Hodge</title>            
+        {% endif %}
     </head>
     <body>
         <nav class="sticky-menu">
