Working version of the site is up and running. Now to make improvements

--- a/jhodge_public/templates/film-single.jinja2
+++ b/jhodge_public/templates/film-single.jinja2
@@ -19,7 +19,9 @@
                 </ul>
             </div>
             <article class="film-description">
-            {{ the_film.full_text }}
+                {% for paragraph in full_text %}
+                    <p>{{ paragraph }}</p>
+                {% endfor %}
             </article>
         </div>
     </section>
