--- a/jhodge_public/templates/film.jinja2
+++ b/jhodge_public/templates/film.jinja2
@@ -25,7 +25,7 @@
                     </div>
                     <div class="film-excerpt">
                         <p>
-                            {{ film.excerpt }}
+                            {{ film.excerpt | safe }}
                         </p>
                         <button type="button" class="red-btn">More</button>
                     </div>
